# first_from_local

./: pyproject.toml
src/first_from_local/: __init__.py
