[project]
name = "first-from-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rekulapallyrohith", email = "rekulapallyrohith17@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
]

[project.scripts]
first-from-local = "first_from_local:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
